--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8, <3.13"
 pyside6 = "^6.6.0"
+qdarkstyle = "^3.2.3"
 
 
 [build-system]
